--- a/.github/workflows/test_workflow.yaml
+++ b/.github/workflows/test_workflow.yaml
@@ -16,5 +16,5 @@ jobs:
           python train.py
 
           # Write your CML report
-          cat results.txt >> report.md
+          cat metrics.txt >> report.md
           cml-send-comment report.md
